[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Godoxel/dialogs/DraggableWindow.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=62]
bg_color = Color( 0.88, 0.3696, 0.3696, 1 )

[sub_resource type="StyleBoxFlat" id=63]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[node name="Window" type="Control"]
visible = false
margin_right = 236.0
margin_bottom = 136.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
color = Color( 0.12549, 0.141176, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="Control" parent="ColorRect/VBoxContainer"]
margin_right = 212.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="ColorRect/VBoxContainer/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="ColorRect/VBoxContainer"]
margin_left = 212.0
margin_right = 236.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/normal = SubResource( 62 )

[node name="ColorRect" type="ColorRect" parent="ColorRect/VBoxContainer/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -6.0
margin_right = 11.0
margin_bottom = -5.0
rect_rotation = 45.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="ColorRect/VBoxContainer/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = 5.0
margin_right = 10.0
margin_bottom = 6.0
rect_rotation = -45.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.2, 0.227451, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
color = Color( 0.234, 0.2655, 0.36, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2/Main"]
margin_top = 98.0
margin_right = 226.0
margin_bottom = 126.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/Main/VBoxContainer"]
margin_right = 226.0
margin_bottom = 24.0
mouse_filter = 2
alignment = 1

[node name="Ok" type="Button" parent="ColorRect2/Main/VBoxContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 88.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 19 )
custom_styles/normal = SubResource( 63 )
text = "Ok"

[node name="Control" type="Control" parent="ColorRect2/Main/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 112.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2

[node name="Cancel" type="Button" parent="ColorRect2/Main/VBoxContainer/HBoxContainer"]
margin_left = 116.0
margin_right = 168.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 19 )
custom_styles/normal = SubResource( 63 )
text = "Cancel"

[node name="Control" type="Control" parent="ColorRect2/Main/VBoxContainer"]
margin_top = 28.0
margin_right = 226.0
margin_bottom = 28.0
mouse_filter = 2

[connection signal="pressed" from="ColorRect/VBoxContainer/CloseButton" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="ColorRect2" to="." method="_on_ColorRect2_gui_input"]
[connection signal="pressed" from="ColorRect2/Main/VBoxContainer/HBoxContainer/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="ColorRect2/Main/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
